## Process this file with automake to produce Makefile.in

gvprdir = $(pkgdatadir)/gvpr

gvpr_DATA = addedges addranks addrings anon attr bb bbox bipart binduce chkclusters \
	chkedges cliptree col collapse color cycle dechain deghist \
	deledges delmulti delnodes depath dijkstra \
	flatten get-layers-list histogram group indent knbhd \
	maxdeg path rotate scale scalexy span topon \
	treetoclust

EXTRA_DIST = $(gvpr_DATA)
